# url-shortener-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: main.py
app/api/: links.py
app/core/: config.py
app/models/: models.py
app/schemas/: link.py
app/services/: cache.py  rate_limit.py  shortener.py
docs/: TECH_REPORT.md
tests/: conftest.py  test_links.py
